add link to other pages in html

--- a/contact-me.html
+++ b/contact-me.html
@@ -10,5 +10,7 @@
       <li>Email: contact@example.com</li>
       <li>Phone: 123-456-7890</li>
     </ul>
+    <a href="/">Home</a>
+    <a href="/about">About</a>
   </body>
 </html>
