--- a/404.html
+++ b/404.html
@@ -6,5 +6,6 @@
   <body>
     <h1>404 - Page Not Found</h1>
     <p>The page you are looking for does not exist.</p>
+    <a href="/">Home</a>
   </body>
 </html>
