--- a/about.html
+++ b/about.html
@@ -6,5 +6,7 @@
   <body>
     <h1>About Us</h1>
     <p>This is the about page of our website.</p>
+    <a href="/">Home</a>
+    <a href="/contact-me">Contact</a>
   </body>
 </html>
