--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   <body>
     <h1>Welcome to the Home Page</h1>
     <p>This is the home page of our website.</p>
+    <a href="/contact-me">Contact</a>
+    <a href="/about">About Us</a>
   </body>
 </html>
